--- a/index.html
+++ b/index.html
@@ -1,11 +1,34 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mosaico HTML</title>
+    <style>
+        /* Estilo para el contenedor del mosaico */
+        .mosaico {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr); /* Tres columnas de igual ancho */
+            grid-gap: 10px; /* Espacio entre las imágenes */
+        }
+
+        /* Estilo para las imágenes */
+        .mosaico img {
+            width: 100%;
+            height: auto;
+            border: 1px solid #ccc; /* Un borde ligero para cada imagen */
+        }
+    </style>
+</head>
+<body>
+    <div class="mosaico">
+        <!-- Imágenes del mosaico -->
+        <img src="imagen1.jpg" alt="Imagen 1">
+        <img src="imagen2.jpg" alt="Imagen 2">
+        <img src="imagen3.jpg" alt="Imagen 3">
+        <img src="imagen4.jpg" alt="Imagen 4">
+        <img src="imagen5.jpg" alt="Imagen 5">
+        <img src="imagen6.jpg" alt="Imagen 6">
+    </div>
+</body>
 </html>
