--- a/index.html
+++ b/index.html
@@ -3,17 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mosaico HTML</title>
-    <link rel="stylesheet" href="index.css"> <!-- Enlace al archivo CSS externo -->
+    <!-- Enlazar SweetAlert2 -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+    <link rel="stylesheet" href="Prueba.css"> <!-- Enlace al archivo CSS externo -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
   <div class="mosaico">
     <div class="mosaico-item">
-      <img src="https://cdn-icons-png.flaticon.com/512/2922/2922656.png" alt="Imagen" class="imagen-color" style="width: 100%;height: auto;border: lawngreen solid;border-radius: 30px;border-top-right-radius: 120px;border-bottom-left-radius: 120px;transition: 0.3s;"><!-- Transición suave de 0.3 segundos para el cambio de color -->
+      <a href="Prueba2.html" id="enlace">      
+        <img src="https://cdn-icons-png.flaticon.com/512/2922/2922656.png" alt="Imagen" class="imagen-color" style="width: 100%;height: auto;border: lawngreen solid;border-radius: 30px;border-top-right-radius: 120px;border-bottom-left-radius: 120px;transition: 0.3s;"><!-- Transición suave de 0.3 segundos para el cambio de color -->
+      </a>
+      <script>
+        // Función para mostrar el loader personalizado sin botón "OK"
+        function mostrarLoader() {
+            Swal.fire({
+                title: 'Cargando...',
+                showConfirmButton: false, // Deshabilitar el botón "OK"
+                allowOutsideClick: false, // Impide que los usuarios cierren el diálogo haciendo clic fuera de él
+                onBeforeOpen: () => {
+                    Swal.showLoading();
+                }
+            });
+        }
+
+        // Agregar un manejador de eventos al enlace
+        const enlace = document.getElementById('enlace');
+        enlace.addEventListener('click', (event) => {
+            event.preventDefault();
+            mostrarLoader();
+            setTimeout(() => {
+                window.location.href = enlace.href;
+            }, 2000);
+        });
+    </script>
       <div class="contenido-celda">
         <p>
-          <a class="datos"><i class="fa-brands fa-instagram" style="color: deeppink; padding: 2px;"></i>gracyvillareal </a><br><br>
+          <a class="datos"><i class="fa-brands fa-instagram" style="color: deeppink; padding: 2px;"></i>gracyvillarreal</a><br><br>
           <a class="datos">Mujer, 32 años</a><br>
           <a class="datos"><i class="fas fa-flag" style="color: #c60c30;"></i>España</a><br><br>
           <a class="datos">Fotografia, Veggie,...</a>
