--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="mosaico">
     <div class="mosaico-item">
-      <a href="Prueba2.html" id="enlace">      
+      <a href="lista.html" id="enlace">      
         <img src="https://cdn-icons-png.flaticon.com/512/2922/2922656.png" alt="Imagen" class="imagen-color" style="width: 100%;height: auto;border: lawngreen solid;border-radius: 30px;border-top-right-radius: 120px;border-bottom-left-radius: 120px;transition: 0.3s;"><!-- Transición suave de 0.3 segundos para el cambio de color -->
       </a>
       <script>
