--- a/lista.html
+++ b/lista.html
@@ -131,20 +131,25 @@
         <div class="elementos_externos" style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; color: darkcyan; font-size: 14px;"><!-- Creacion de elementos externos, (Salir, descargar y perfil) -->
             <p><i class="fa-solid fa-right-from-bracket"></i> Salir</p><!-- crear salida -->
             <button style="background-color: white;border: 0;font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; color: darkcyan; font-size: 14px;" id="descargarPDF"><p><i class="fa-solid fa-download"></i> Descargar influcard</p></button><!-- Boton para descargar en pdf -->
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.4/jspdf.min.js"></script><!-- Script necesario para descargar la libreria de jsPDF -->
-                <script>
-                    document.getElementById("descargarPDF").addEventListener("click", function() {
-                        console.log("Botón de descarga clicado.");
-                        // Crear una instancia de jsPDF
-                        var doc = new jsPDF();
-                
-                        // Agregar el contenido de la página al PDF
-                        doc.fromHTML(document.documentElement, 15, 15);
-                
-                        // Descargar el PDF con un nombre de archivo predeterminado (puedes cambiarlo)
-                        doc.save("pagina.pdf");
-                    });
-                </script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script><!-- Script necesario para descargar la libreria de jsPDF -->
+            <script>
+                document.getElementById("descargarPDF").addEventListener("click", function() {
+                // Elemento HTML que deseas convertir a PDF
+                var elemento = document.body;
+
+                // Opciones de configuración para la conversión
+                var opciones = {
+                    margin: 10,
+                    filename: 'mi_pagina.pdf', // Nombre del archivo PDF
+                    image: { type: 'jpeg', quality: 0.98 },
+                    html2canvas: { scale: 2 },
+                    jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' }
+                };
+
+                // Iniciar la conversión a PDF y descargar
+                html2pdf().from(elemento).set(opciones).outputPdf();
+            });
+            </script>
             <p><i class="fa-solid fa-eye"></i> Ver perfil</p><!-- crear ver perfil -->
         </div>  
     </div>
