--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="mosaico">
     <div class="mosaico-item">
-      <a href="Prueba2.html" id="enlace">      
+      <a href="lista.html" id="enlace">      
         <img src="https://cdn-icons-png.flaticon.com/512/2922/2922656.png" alt="Imagen" class="imagen-color" style="width: 100%;height: auto;border: lawngreen solid;border-radius: 30px;border-top-right-radius: 120px;border-bottom-left-radius: 120px;transition: 0.3s;"><!-- Transición suave de 0.3 segundos para el cambio de color -->
       </a>
       <script>
@@ -92,7 +92,7 @@
     </div>
   </div>
   <div class="mosaico-item">
-    <a href="Prueba2.html" id="enlace2">      
+    <a href="lista.html" id="enlace2">      
       <img src="https://cdn-icons-png.flaticon.com/512/2922/2922656.png" alt="Imagen" class="imagen-color" style="width: 100%;height: auto;border: lawngreen solid;border-radius: 30px;border-top-right-radius: 120px;border-bottom-left-radius: 120px;transition: 0.3s;"><!-- Transición suave de 0.3 segundos para el cambio de color -->
     </a>
     <script>
@@ -173,7 +173,7 @@
   </div>
 </div>
 <div class="mosaico-item">
-  <a href="Prueba2.html" id="enlace3">      
+  <a href="lista.html" id="enlace3">      
     <img src="https://cdn-icons-png.flaticon.com/512/2922/2922656.png" alt="Imagen" class="imagen-color" style="width: 100%;height: auto;border: lawngreen solid;border-radius: 30px;border-top-right-radius: 120px;border-bottom-left-radius: 120px;transition: 0.3s;"><!-- Transición suave de 0.3 segundos para el cambio de color -->
   </a>
   <script>
@@ -254,7 +254,7 @@
 </div>
 </div>
 <div class="mosaico-item">
-  <a href="Prueba2.html" id="enlace4">      
+  <a href="lista.html" id="enlace4">      
     <img src="https://cdn-icons-png.flaticon.com/512/2922/2922656.png" alt="Imagen" class="imagen-color" style="width: 100%;height: auto;border: lawngreen solid;border-radius: 30px;border-top-right-radius: 120px;border-bottom-left-radius: 120px;transition: 0.3s;"><!-- Transición suave de 0.3 segundos para el cambio de color -->
   </a>
   <script>
@@ -335,7 +335,7 @@
 </div>
 </div>
 <div class="mosaico-item">
-  <a href="Prueba2.html" id="enlace5">      
+  <a href="lista.html" id="enlace5">      
     <img src="https://cdn-icons-png.flaticon.com/512/2922/2922656.png" alt="Imagen" class="imagen-color" style="width: 100%;height: auto;border: lawngreen solid;border-radius: 30px;border-top-right-radius: 120px;border-bottom-left-radius: 120px;transition: 0.3s;"><!-- Transición suave de 0.3 segundos para el cambio de color -->
   </a>
   <script>
@@ -416,7 +416,7 @@
 </div>
 </div>
 <div class="mosaico-item">
-  <a href="Prueba2.html" id="enlace6">      
+  <a href="lista.html" id="enlace6">      
     <img src="https://cdn-icons-png.flaticon.com/512/2922/2922656.png" alt="Imagen" class="imagen-color" style="width: 100%;height: auto;border: lawngreen solid;border-radius: 30px;border-top-right-radius: 120px;border-bottom-left-radius: 120px;transition: 0.3s;"><!-- Transición suave de 0.3 segundos para el cambio de color -->
   </a>
   <script>
