--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Enlazar SweetAlert2 -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
-    <link rel="stylesheet" href="index.css"> <!-- Enlace al archivo CSS externo -->
+    <link rel="stylesheet" href="index"> <!-- Enlace al archivo CSS externo -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -82,7 +82,7 @@
           </div>
           <div class="fila">
             <div class="columna">
-              <a class="datos-numeros"><i class="fa-solid fa-eye" style="padding-right: 5px;"></i>Impresiones:</a><br>
+              <a class="datos-numeros"><i class="fa-solid fa-eye" style="padding-right: 5px;"></i>Impresion:</a><br>
             </div>
             <div class="columna">
               <a class="numeros">272.68 k</a><br>
@@ -92,7 +92,7 @@
     </div>
   </div>
   <div class="mosaico-item">
-    <a href="lista.html" id="enlace2">      
+    <a href="Prueba2.html" id="enlace2">      
       <img src="https://cdn-icons-png.flaticon.com/512/2922/2922656.png" alt="Imagen" class="imagen-color" style="width: 100%;height: auto;border: lawngreen solid;border-radius: 30px;border-top-right-radius: 120px;border-bottom-left-radius: 120px;transition: 0.3s;"><!-- Transición suave de 0.3 segundos para el cambio de color -->
     </a>
     <script>
@@ -163,7 +163,7 @@
         </div>
         <div class="fila">
           <div class="columna">
-            <a class="datos-numeros"><i class="fa-solid fa-eye" style="padding-right: 5px;"></i>Impresiones:</a><br>
+            <a class="datos-numeros"><i class="fa-solid fa-eye" style="padding-right: 8px;"></i>Impresion:</a><br>
           </div>
           <div class="columna">
             <a class="numeros">272.68 k</a><br>
@@ -173,7 +173,7 @@
   </div>
 </div>
 <div class="mosaico-item">
-  <a href="lista.html" id="enlace3">      
+  <a href="Prueba2.html" id="enlace3">      
     <img src="https://cdn-icons-png.flaticon.com/512/2922/2922656.png" alt="Imagen" class="imagen-color" style="width: 100%;height: auto;border: lawngreen solid;border-radius: 30px;border-top-right-radius: 120px;border-bottom-left-radius: 120px;transition: 0.3s;"><!-- Transición suave de 0.3 segundos para el cambio de color -->
   </a>
   <script>
@@ -244,7 +244,7 @@
       </div>
       <div class="fila">
         <div class="columna">
-          <a class="datos-numeros"><i class="fa-solid fa-eye" style="padding-right: 5px;"></i>Impresiones:</a><br>
+          <a class="datos-numeros"><i class="fa-solid fa-eye" style="padding-right: 5px;"></i>Impresion:</a><br>
         </div>
         <div class="columna">
           <a class="numeros">272.68 k</a><br>
@@ -254,7 +254,7 @@
 </div>
 </div>
 <div class="mosaico-item">
-  <a href="lista.html" id="enlace4">      
+  <a href="Prueba2.html" id="enlace4">      
     <img src="https://cdn-icons-png.flaticon.com/512/2922/2922656.png" alt="Imagen" class="imagen-color" style="width: 100%;height: auto;border: lawngreen solid;border-radius: 30px;border-top-right-radius: 120px;border-bottom-left-radius: 120px;transition: 0.3s;"><!-- Transición suave de 0.3 segundos para el cambio de color -->
   </a>
   <script>
@@ -325,7 +325,7 @@
       </div>
       <div class="fila">
         <div class="columna">
-          <a class="datos-numeros"><i class="fa-solid fa-eye" style="padding-right: 5px;"></i>Impresiones:</a><br>
+          <a class="datos-numeros"><i class="fa-solid fa-eye" style="padding-right: 5px;"></i>Impresion:</a><br>
         </div>
         <div class="columna">
           <a class="numeros">272.68 k</a><br>
@@ -335,7 +335,7 @@
 </div>
 </div>
 <div class="mosaico-item">
-  <a href="lista.html" id="enlace5">      
+  <a href="Prueba2.html" id="enlace5">      
     <img src="https://cdn-icons-png.flaticon.com/512/2922/2922656.png" alt="Imagen" class="imagen-color" style="width: 100%;height: auto;border: lawngreen solid;border-radius: 30px;border-top-right-radius: 120px;border-bottom-left-radius: 120px;transition: 0.3s;"><!-- Transición suave de 0.3 segundos para el cambio de color -->
   </a>
   <script>
@@ -406,7 +406,7 @@
       </div>
       <div class="fila">
         <div class="columna">
-          <a class="datos-numeros"><i class="fa-solid fa-eye" style="padding-right: 5px;"></i>Impresiones:</a><br>
+          <a class="datos-numeros"><i class="fa-solid fa-eye" style="padding-right: 5px;"></i>Impresion:</a><br>
         </div>
         <div class="columna">
           <a class="numeros">272.68 k</a><br>
@@ -416,7 +416,7 @@
 </div>
 </div>
 <div class="mosaico-item">
-  <a href="lista.html" id="enlace6">      
+  <a href="Prueba2.html" id="enlace6">      
     <img src="https://cdn-icons-png.flaticon.com/512/2922/2922656.png" alt="Imagen" class="imagen-color" style="width: 100%;height: auto;border: lawngreen solid;border-radius: 30px;border-top-right-radius: 120px;border-bottom-left-radius: 120px;transition: 0.3s;"><!-- Transición suave de 0.3 segundos para el cambio de color -->
   </a>
   <script>
@@ -487,7 +487,7 @@
       </div>
       <div class="fila">
         <div class="columna">
-          <a class="datos-numeros"><i class="fa-solid fa-eye" style="padding-right: 5px;"></i>Impresiones:</a><br>
+          <a class="datos-numeros"><i class="fa-solid fa-eye" style="padding-right: 5px;"></i>Impresion:</a><br>
         </div>
         <div class="columna">
           <a class="numeros">272.68 k</a><br>
@@ -497,7 +497,6 @@
 </div>
 </div>
 </div>
-    <!-- Continúa con las demás celdas del mosaico -->
 </div>
 </body>
 </html>
