--- a/lista.html
+++ b/lista.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Enlazar SweetAlert2 -->
-    <link rel="stylesheet" href="Prueba2.css"> <!-- Enlace al archivo CSS de lista.css -->
+    <link rel="stylesheet" href="lista.css"> <!-- Enlace al archivo CSS de lista.css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- Enlazar con los iconos de font-awesome -->
     <script src="https://cdn.amcharts.com/lib/4/core.js"></script><!-- inserts necesarios para usar javaScript -->
     <script src="https://cdn.amcharts.com/lib/4/charts.js"></script>
@@ -132,7 +132,7 @@
 
         </div>  
         <div class="elementos_externos" style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; color: darkcyan; font-size: 14px;"><!-- Creacion de elementos externos, (Salir, descargar y perfil) -->
-            <a href="Prueba.html" id="vuelta"  style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; color: darkcyan; font-size: 14px;text-decoration: none;">      
+            <a href="index.html" id="vuelta"  style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; color: darkcyan; font-size: 14px;text-decoration: none;">      
                 <p><i class="fa-solid fa-right-from-bracket"></i><a> Salir</a></p><!-- crear salida -->
             </a>
               <script>
